[package]
name = "rain"
description = "Rain programming language compiler source code"
edition = "2021"
authors = ["hello@nikee.dev <Nikita Goncarenko/nikeedev>"]
version = "0.2.0-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
