[package]
name = "rain"
description = "Rain programming language compiler source code"
edition = "2024"
authors = ["hello@nikee.dev <Nikita Goncarenko/nikeedev>"]
version = "0.2.0-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
